// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading > Loading attachVue demo works fine 1`] = `
<div
  class="loading-demo"
  data-v-322a8e53=""
>
  <div
    class="loading-attach-demo__title"
    data-v-322a8e53=""
    id="alice"
  >
    Hello, I'm Alice. I'm going to be a front-end developer.
  </div>
  <!---->
  <div
    class="t-switch t-switch--small"
    data-v-322a8e53=""
  >
    <div
      class="t-switch__dot t-switch__dot--small"
    >
      <div
        class="t-switch__label t-switch__label--small"
      >
        关
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading > Loading baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-loading"
    data-v-ed539936=""
    style="font-size: 20px;"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms; width: 20px; height: 20px;"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <!---->
    <!---->
  </div>
  <div
    class="t-loading"
    data-v-ed539936=""
    style="font-size: 20px;"
  >
    <span
      class="t-loading__spinner"
      style="animation-duration: 800ms; width: 20px; height: 20px;"
    >
      
      <i
        class="t-loading__spinner--line t-loading__spinner--line-1"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-2"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-3"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-4"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-5"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-6"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-7"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-8"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-9"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-10"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-11"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-12"
      />
      
    </span>
    <!---->
    <!---->
  </div>
  <div
    class="t-loading"
    data-v-ed539936=""
    style="font-size: 40px;"
  >
    <div
      class="t-loading__dots"
      style="animation-duration: 800ms; width: 40px; height: 40px;"
    >
      
      <div
        class="t-loading__dot"
        style="animation-duration: 0.8s; animation-delay: 0s;"
      />
      <div
        class="t-loading__dot"
        style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
      />
      <div
        class="t-loading__dot"
        style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
      />
      
    </div>
    <!---->
    <!---->
  </div>
  
</div>
`;

exports[`Loading > Loading delayVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="switch-wrap"
    data-v-c584110f=""
  >
    <div
      class="t-switch t-switch--medium"
      data-v-c584110f=""
    >
      <div
        class="t-switch__dot t-switch__dot--medium t-switch__dot--plain"
      >
        <div
          class="t-switch__label t-switch__label--medium"
        >
          <!---->
        </div>
      </div>
    </div>
    <div
      data-v-c584110f=""
    >
      请求结束，隐藏loading
    </div>
  </div>
  <div
    class="t-loading"
    data-v-c584110f=""
    style="font-size: 20px;"
  >
    <!---->
    <!---->
    <!---->
  </div>
  
</div>
`;

exports[`Loading > Loading fullscreenVue demo works fine 1`] = `
<div
  class="loading-demo"
  data-v-f91db58e=""
>
  <!---->
  <div
    data-v-f91db58e=""
  >
     全局加载开关（开启加载1秒后自动归位）： 
    <div
      class="t-switch t-switch--small"
      data-v-f91db58e=""
    >
      <div
        class="t-switch__dot t-switch__dot--small t-switch__dot--plain"
      >
        <div
          class="t-switch__label t-switch__label--small"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading > Loading horzVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-loading"
    data-v-9d98c19e=""
    style="font-size: 20px;"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms; width: 20px; height: 20px;"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <span
      class="t-loading__text"
    >
      加载中...
    </span>
    <!---->
  </div>
  <div
    class="t-loading"
    data-v-9d98c19e=""
    style="font-size: 20px;"
  >
    <span
      class="t-loading__spinner"
      style="animation-duration: 800ms; width: 20px; height: 20px;"
    >
      
      <i
        class="t-loading__spinner--line t-loading__spinner--line-1"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-2"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-3"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-4"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-5"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-6"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-7"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-8"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-9"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-10"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-11"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-12"
      />
      
    </span>
    <span
      class="t-loading__text"
    >
      加载中...
    </span>
    <!---->
  </div>
  
</div>
`;

exports[`Loading > Loading mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-e4d4f46b=""
>
  <h1
    class="title"
    data-v-e4d4f46b=""
  >
    Loading 加载中
  </h1>
  <p
    class="summary"
    data-v-e4d4f46b=""
  >
    用于表示页面或操作的加载状态，给予用户反馈的同时减缓等待的焦虑感，由一个或一组反馈动效组成。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-e4d4f46b=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯图标
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="loading-demo--flex"
        data-v-e4d4f46b=""
      >
        
        <div
          class="t-loading"
          data-v-ed539936=""
          style="font-size: 20px;"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
            version="1.1"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="0"
              y="0"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          <!---->
          <!---->
        </div>
        <div
          class="t-loading"
          data-v-ed539936=""
          style="font-size: 20px;"
        >
          <span
            class="t-loading__spinner"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            
            <i
              class="t-loading__spinner--line t-loading__spinner--line-1"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-2"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-3"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-4"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-5"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-6"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-7"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-8"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-9"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-10"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-11"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-12"
            />
            
          </span>
          <!---->
          <!---->
        </div>
        <div
          class="t-loading"
          data-v-ed539936=""
          style="font-size: 40px;"
        >
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 40px; height: 40px;"
          >
            
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
            
          </div>
          <!---->
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e4d4f46b=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标加文字横向
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="loading-demo--flex"
        data-v-e4d4f46b=""
      >
        
        <div
          class="t-loading"
          data-v-9d98c19e=""
          style="font-size: 20px;"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
            version="1.1"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="0"
              y="0"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          <span
            class="t-loading__text"
          >
            加载中...
          </span>
          <!---->
        </div>
        <div
          class="t-loading"
          data-v-9d98c19e=""
          style="font-size: 20px;"
        >
          <span
            class="t-loading__spinner"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            
            <i
              class="t-loading__spinner--line t-loading__spinner--line-1"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-2"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-3"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-4"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-5"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-6"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-7"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-8"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-9"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-10"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-11"
            />
            <i
              class="t-loading__spinner--line t-loading__spinner--line-12"
            />
            
          </span>
          <span
            class="t-loading__text"
          >
            加载中...
          </span>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e4d4f46b=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标加文字竖向
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="loading-demo--flex"
        data-v-e4d4f46b=""
      >
        <div
          class="container"
          data-v-a2ea6ccb=""
          data-v-e4d4f46b=""
        >
          <div
            class="t-loading t-loading--vertical"
            data-v-a2ea6ccb=""
            style="font-size: 20px;"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
              version="1.1"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="0"
                y="0"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
            <span
              class="t-loading__text"
            >
              加载中
            </span>
            <!---->
          </div>
          <div
            class="t-loading t-loading--vertical"
            data-v-a2ea6ccb=""
            style="font-size: 20px;"
          >
            <span
              class="t-loading__spinner"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
            >
              
              <i
                class="t-loading__spinner--line t-loading__spinner--line-1"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-2"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-3"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-4"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-5"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-6"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-7"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-8"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-9"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-10"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-11"
              />
              <i
                class="t-loading__spinner--line t-loading__spinner--line-12"
              />
              
            </span>
            <span
              class="t-loading__text"
            >
              加载中...
            </span>
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e4d4f46b=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        纯文字
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="loading-demo--flex"
        data-v-e4d4f46b=""
      >
        <div
          class="t-loading"
          data-v-e4d4f46b=""
          style="font-size: 20px;"
        >
          <!---->
          <span
            class="t-loading__text t-loading__text--only"
          >
            加载中...
          </span>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-e4d4f46b=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件尺寸
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="loading-demo"
        data-v-8b49e899=""
      >
        <div
          class="loading-demo__summary mb-16"
          data-v-8b49e899=""
        >
          大尺寸
        </div>
        <div
          class="t-loading"
          data-v-8b49e899=""
          style="font-size: 26px;"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms; width: 26px; height: 26px;"
            version="1.1"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="0"
              y="0"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          <span
            class="t-loading__text"
          >
            加载中...
          </span>
          <!---->
        </div>
      </div>
      <div
        class="loading-demo"
        data-v-8b49e899=""
      >
        <div
          class="loading-demo__summary mt-24 mb-16"
          data-v-8b49e899=""
        >
          中尺寸
        </div>
        <div
          class="t-loading"
          data-v-8b49e899=""
          style="font-size: 22px;"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms; width: 22px; height: 22px;"
            version="1.1"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="0"
              y="0"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          <span
            class="t-loading__text"
          >
            加载中...
          </span>
          <!---->
        </div>
      </div>
      <div
        class="loading-demo"
        data-v-8b49e899=""
      >
        <div
          class="loading-demo__summary mt-24 mb-16"
          data-v-8b49e899=""
        >
          小尺寸
        </div>
        <div
          class="t-loading"
          data-v-8b49e899=""
          style="font-size: 20px;"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
            version="1.1"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="0"
              y="0"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          <span
            class="t-loading__text"
          >
            加载中...
          </span>
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-e4d4f46b=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 加载速度
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        加载速度调整
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="loading-demo"
        data-v-4a5d8906=""
      >
        <div
          class="t-loading"
          data-v-4a5d8906=""
          style="font-size: 20px;"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            style="animation-duration: 600ms; width: 20px; height: 20px;"
            version="1.1"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="0"
              y="0"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
          <span
            class="t-loading__text"
          >
            加载中...
          </span>
          <!---->
        </div>
      </div>
      <div
        class="slider-wrap"
        data-v-4a5d8906=""
      >
        <div
          class="t-slider"
          data-v-4a5d8906=""
        >
          <!---->
          <div
            class="t-slider__bar t-slider__bar--default"
          >
            <!---->
            <div
              class="t-slider__line t-slider__line--default t-slider__line--single"
              style=""
            >
              <div
                class="t-slider__dot"
              >
                <!---->
                <div
                  class="t-slider__dot-slider"
                />
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
      
      
    </div>
  </div>
  <!-- 视觉稿待定，暂时注释 -->
  <!-- &lt;tdesign-demo-block title="04 全屏加载" summary="全屏展示加载状态，阻止用户操作。"&gt;
      &lt;fullscreen /&gt;
    &lt;/tdesign-demo-block&gt;
    &lt;tdesign-demo-block
      title="05 挂载到指定元素"
      summary="可通过 attach 挂载到指定元素。注：被挂载元素（loading的父元素）需设置：position: relative;"
    &gt;
      &lt;attach /&gt;
    &lt;/tdesign-demo-block&gt;
    &lt;tdesign-demo-block title="06 函数方式调用"&gt;
      &lt;service /&gt;
    &lt;/tdesign-demo-block&gt; -->
</div>
`;

exports[`Loading > Loading pureTextVue demo works fine 1`] = `
<div
  class="t-loading"
  style="font-size: 20px;"
>
  <!---->
  <span
    class="t-loading__text t-loading__text--only"
  >
    加载中...
  </span>
  <!---->
</div>
`;

exports[`Loading > Loading serviceVue demo works fine 1`] = `
<div
  class="loading-demo"
  data-v-3c7f36de=""
>
  <div
    class="loading-service-demo"
    data-v-3c7f36de=""
    id="loading-service-demo"
  >
    Loading 挂载容器
  </div>
  <div
    class="space"
    data-v-3c7f36de=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-small t-button--base t-button--default t-button--rectangle t-loading__btn"
      data-v-3c7f36de=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
         函数方式加载（局部） 
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-small t-button--base t-button--default t-button--rectangle"
      data-v-3c7f36de=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        函数方式加载（全屏）
        
      </span>
      <!---->
    </button>
  </div>
</div>
`;

exports[`Loading > Loading sizeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="loading-demo"
    data-v-8b49e899=""
  >
    <div
      class="loading-demo__summary mb-16"
      data-v-8b49e899=""
    >
      大尺寸
    </div>
    <div
      class="t-loading"
      data-v-8b49e899=""
      style="font-size: 26px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 26px; height: 26px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <span
        class="t-loading__text"
      >
        加载中...
      </span>
      <!---->
    </div>
  </div>
  <div
    class="loading-demo"
    data-v-8b49e899=""
  >
    <div
      class="loading-demo__summary mt-24 mb-16"
      data-v-8b49e899=""
    >
      中尺寸
    </div>
    <div
      class="t-loading"
      data-v-8b49e899=""
      style="font-size: 22px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 22px; height: 22px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <span
        class="t-loading__text"
      >
        加载中...
      </span>
      <!---->
    </div>
  </div>
  <div
    class="loading-demo"
    data-v-8b49e899=""
  >
    <div
      class="loading-demo__summary mt-24 mb-16"
      data-v-8b49e899=""
    >
      小尺寸
    </div>
    <div
      class="t-loading"
      data-v-8b49e899=""
      style="font-size: 20px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 20px; height: 20px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <span
        class="t-loading__text"
      >
        加载中...
      </span>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Loading > Loading speedVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="loading-demo"
    data-v-4a5d8906=""
  >
    <div
      class="t-loading"
      data-v-4a5d8906=""
      style="font-size: 20px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 600ms; width: 20px; height: 20px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <span
        class="t-loading__text"
      >
        加载中...
      </span>
      <!---->
    </div>
  </div>
  <div
    class="slider-wrap"
    data-v-4a5d8906=""
  >
    <div
      class="t-slider"
      data-v-4a5d8906=""
    >
      <!---->
      <div
        class="t-slider__bar t-slider__bar--default"
      >
        <!---->
        <div
          class="t-slider__line t-slider__line--default t-slider__line--single"
          style=""
        >
          <div
            class="t-slider__dot"
          >
            <!---->
            <div
              class="t-slider__dot-slider"
            />
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  
</div>
`;

exports[`Loading > Loading vertVue demo works fine 1`] = `
<div
  class="container"
  data-v-a2ea6ccb=""
>
  <div
    class="t-loading t-loading--vertical"
    data-v-a2ea6ccb=""
    style="font-size: 20px;"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      style="animation-duration: 800ms; width: 20px; height: 20px;"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <span
      class="t-loading__text"
    >
      加载中
    </span>
    <!---->
  </div>
  <div
    class="t-loading t-loading--vertical"
    data-v-a2ea6ccb=""
    style="font-size: 20px;"
  >
    <span
      class="t-loading__spinner"
      style="animation-duration: 800ms; width: 20px; height: 20px;"
    >
      
      <i
        class="t-loading__spinner--line t-loading__spinner--line-1"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-2"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-3"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-4"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-5"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-6"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-7"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-8"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-9"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-10"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-11"
      />
      <i
        class="t-loading__spinner--line t-loading__spinner--line-12"
      />
      
    </span>
    <span
      class="t-loading__text"
    >
      加载中...
    </span>
    <!---->
  </div>
</div>
`;
